# golem-shopping

./: .gitignore  BLOG_POST.md  Cargo.toml  Makefile.toml  README.md  architecture.puml  golem.yaml  make.sh
.github/workflows/: ci.yml
api/: README.md  cart.json  cart.json.tmpl  order.json  order.json.tmpl  pricing.json  pricing.json.tmpl  product.json  product.json.tmpl  shopping-api.json  shopping-api.yaml
bench/: benchmark.yaml
benchmark/: Cargo.toml  README.md  drill-benchmark.yaml  import.yaml  report-cloud-dev.html  report-local.html
benchmark/fixtures/: prices.csv  products.csv
benchmark/src/: data.rs  domain.rs  goose_ext.rs  main.rs
cart/: Cargo.toml
cart/src/: bindings.rs  domain.rs  lib.rs
cart/src_wit/: cart.wit
cart/wit/: cart.wit  shopping-cart.wit
components/cart/: Cargo.toml
components/cart/src/: bindings.rs  lib.rs
components/cart/wit/: cart.wit
components/order/: Cargo.toml
components/order/src/: bindings.rs
components/order/wit/: order.wit
components/pricing/: Cargo.toml
components/pricing/src/: bindings.rs  domain.rs  lib.rs
components/pricing/src_wit/: pricing.wit
components/product/: Cargo.toml
components/product-search/: Cargo.toml
components/product-search/src/: bindings.rs  lib.rs
components/product-search/src_wit/: product-search.wit
components/product/wit/: product.wit
data/: README.md
docker/: .env
frontend/: package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: config.ts
frontend/src/api/services/: cartService.ts  orderService.ts  pricingService.ts  productService.ts
frontend/src/components/: ProductCard.vue
frontend/src/stores/: authStore.ts  cartStore.ts  orderStore.ts  productStore.ts
frontend/src/types/: address.ts  datetime.ts
frontend/src/utils/: currency.ts
frontend/src/views/: CartView.vue  CheckoutView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  OrderDetailView.vue  OrderListView.vue  ProductDetailView.vue  ProductListView.vue
order/: Cargo.toml
order-stub/: Cargo.toml
order-stub/src/: bindings.rs  lib.rs
order-stub/wit/: _stub.wit
order/src/: bindings.rs  domain.rs  lib.rs
order/src_wit/: order.wit
order/wit/: order.wit  shopping-order.wit
pricing/: Cargo.toml
pricing-stub/: Cargo.toml
pricing-stub/src/: bindings.rs  lib.rs
pricing-stub/wit/: _stub.wit
pricing/src/: bindings.rs  domain.rs  lib.rs
pricing/src_wit/: pricing.wit
pricing/wit/: pricing.wit  shopping-pricing.wit
product/: Cargo.toml
product-search/: Cargo.toml
product-search/src/: bindings.rs  lib.rs
product-search/src_wit/: product-search.wit
product-search/wit/: product-search.wit
product-stub/: Cargo.toml
product-stub/src/: bindings.rs  lib.rs
product-stub/wit/: _stub.wit
product/src/: bindings.rs  domain.rs  lib.rs
product/src_wit/: product.wit
product/wit/: product.wit  shopping-product.wit
