[package]
name = "cart"
version = "0.0.1"
edition = "2021"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies."golem:api"]
path = "wit/deps/golem"

[package.metadata.component.target.dependencies."golem:cart-exports"]
path = "wit/deps/golem_cart-exports"

[package.metadata.component.target.dependencies."golem:order-client"]
path = "wit/deps/golem_order-client"

[package.metadata.component.target.dependencies."golem:order-exports"]
path = "wit/deps/golem_order-exports"

[package.metadata.component.target.dependencies."golem:pricing-client"]
path = "wit/deps/golem_pricing-client"

[package.metadata.component.target.dependencies."golem:pricing-exports"]
path = "wit/deps/golem_pricing-exports"

[package.metadata.component.target.dependencies."golem:product-client"]
path = "wit/deps/golem_product-client"

[package.metadata.component.target.dependencies."golem:product-exports"]
path = "wit/deps/golem_product-exports"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."wasi:clocks"]
path = "wit/deps/clocks"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit/deps/io"

[dependencies]
email_address = "0.2.9"
golem-rust = "1.1.0"
once_cell = "1.17.1"
rand = "0.8.5"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[dependencies.wit-bindgen-rt]
version = "0.37.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
