[package]
name = "order"
version = "0.0.1"
edition = "2021"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit/deps/io" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"golem:rpc" = { path = "wit/deps/golem-rpc" }
"golem:api" = { path = "wit/deps/golem" }
"golem:pricing-exports" = { path = "wit/deps/golem_pricing-exports" }
"golem:pricing-client" = { path = "wit/deps/golem_pricing-client" }
"golem:product-exports" = { path = "wit/deps/golem_product-exports" }
"golem:product-client" = { path = "wit/deps/golem_product-client" }
"golem:order-exports" = { path = "wit/deps/golem_order-exports" }

[package.metadata.component.bindings]

[dependencies]
email_address = "0.2.9"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wit-bindgen-rt]
version = "0.37.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
