[package]
name = "pricing"
version = "0.0.1"
edition = "2021"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies."golem:api"]
path = "wit/deps/golem"

[package.metadata.component.target.dependencies."golem:pricing-exports"]
path = "wit/deps/golem_pricing-exports"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."wasi:clocks"]
path = "wit/deps/clocks"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit/deps/io"

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wit-bindgen-rt]
version = "0.37.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
