[package]
name = "pricing"
version = "0.0.1"
edition = "2021"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit/deps/io" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"golem:rpc" = { path = "wit/deps/golem-rpc" }
"golem:api" = { path = "wit/deps/golem" }
"golem:pricing-exports" = { path = "wit/deps/golem_pricing-exports" }

[dependencies]
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wit-bindgen-rt]
version = "0.39.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
