[package]
name = "product-search"
version = "0.0.1"
edition = "2021"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit/deps/io" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"golem:rpc" = { path = "wit/deps/golem-rpc" }
"golem:api" = { path = "wit/deps/golem" }
"golem:product-exports" = { path = "wit/deps/golem_product-exports" }
"golem:product-client" = { path = "wit/deps/golem_product-client" }
"golem:product-search-exports" = { path = "wit/deps/golem_product-search-exports" }

[package.metadata.component.bindings]

[package.metadata.component.bindings.with]
"wasi:io/poll@0.2.0" = "golem_rust::wasm_rpc::wasi::io::poll"
"wasi:clocks/monotonic-clock@0.2.0" = "golem_rust::bindings::wasi::clocks::monotonic_clock"
"wasi:clocks/wall-clock@0.2.0" = "golem_rust::wasm_rpc::wasi::clocks::wall_clock"
"golem:rpc/types@0.2.0" = "golem_rust::wasm_rpc::golem_rpc_0_2_x::types"
"golem:api/host@1.1.6" = "golem_rust::bindings::golem::api::host"

[dependencies.wit-bindgen-rt]
version = "0.43.0"
features = ["bitflags"]

[dependencies.golem-rust]
version = "1.6.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
