[package]
name = "product"
version = "0.0.1"
edition = "2021"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit/deps/io" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"golem:rpc" = { path = "wit/deps/golem-rpc" }
"golem:api" = { path = "wit/deps/golem" }
"golem:product-exports" = { path = "wit/deps/golem_product-exports" }

[dependencies]
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[dependencies.wit-bindgen-rt]
version = "0.44.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
